<resources>
    <string name="app_name">Sorted</string>
    <string name="submit">Submit</string>
    <string name="back3">Back</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_email">Send Email</string>
    <string name="find">Find</string>
    <string name="back2">Back</string>
    <string name="enter_url">Enter URL</string>
    <string name="url_finder">URL Finder</string>
    <string name="heading_send_email">Heading Send Email</string>
    <string name="heading_url_finder">Heading URL Finder</string>
    <string name="url_finder_app">URL Finder</string>
    <string name="email_app">Email</string>
    <string name="to_do_app">To-Do</string>
    <string name="exit_app">Exit</string>
    <string name="minimalist_app">Minimalist App</string>
    <string name="heading_minimalist_app">Heading Minimalist App</string>
    <string name="submit4">Submit</string>
    <string name="delete4">Delete</string>
    <string name="edit4">Edit</string>
    <string name="back4">Back</string>
    <string name="note4">Note</string>
    <string name="to_do">To-Do</string>
    <string name="heading_to_do">Heading To-Do</string>
    <string name="calculate">Calculate</string>
    <string name="addB">+</string>
    <string name="subB">-</string>
    <string name="mulB">*</string>
    <string name="divB">/</string>
    <string name="oneB">1</string>
    <string name="twoB">2</string>
    <string name="threeB">3</string>
    <string name="fourB">4</string>
    <string name="fiveB">5</string>
    <string name="sixB">6</string>
    <string name="sevenB">7</string>
    <string name="eightB">8</string>
    <string name="nineB">9</string>
    <string name="zeroB">0</string>
    <string name="decimalB">.</string>
    <string name="equalB">=</string>
    <string name="modulusB">%</string>
    <string name="clearB">Clear</string>
    <string name="back5">Back</string>
    <string name="calculator">Calculator</string>
    <string name="power">^</string>
    <string name="calculator_heading">Calculator</string>
    <string name="gameSubmitB">Enter</string>
    <string name="gameEnterT">Entry</string>
    <string name="gameResultV">Result</string>
    <string name="gameTitle">Guessing Game</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
</resources>