<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/calculate"
        android:inputType="numberDecimal"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/button31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/back5"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/threeB"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/button29"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/modulusB"
            app:layout_column="4"
            app:layout_row="4" />

        <Button
            android:id="@+id/button13"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/addB"
            android:textStyle="bold"
            app:layout_column="4"
            app:layout_row="0" />

        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/sixB"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/button33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/power"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/button14"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/subB"
            android:textStyle="bold"
            app:layout_column="4"
            app:layout_row="1" />

        <Button
            android:id="@+id/button26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/zeroB"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/oneB"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/button24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/eightB"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/fourB"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/clearB"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/twoB"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/button28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/equalB"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/sevenB"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/decimalB"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/button15"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/mulB"
            android:textStyle="bold"
            app:layout_column="4"
            app:layout_row="2" />

        <Button
            android:id="@+id/button16"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/divB"
            android:textStyle="bold"
            app:layout_column="4"
            app:layout_row="3" />

        <Button
            android:id="@+id/button25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/nineB"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/button21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/fiveB"
            app:layout_column="2"
            app:layout_row="2" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:text="@string/calculator_heading"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>